testsuite/tests/ghc-regress/typecheck/should_fail/tcfail176.hs
{-# OPTIONS -fglasgow-exts #-}

-- Newtype in GADT syntax

module ShouldFail where

newtype Bug a where Bug :: a -> Maybe a
